refactor: use tolist instead of collector